--- a/style.css
+++ b/style.css
@@ -1,96 +1,68 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap');
+
 body {
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
+    background-color: #131316;
+    color: #ffffff;
+    font-family: 'Poppins', sans-serif;
     padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background: url('https://i.imgur.com/ObdmO3U.jpg') center/cover no-repeat;
-    /*  https://i.imgur.com/ObdmO3U.jpg ||   https://i.imgur.com/9SyfZc0.jpg    */
+    margin: 0;
+}
+section {
+    display: grid;
+    place-items: center; 
+    align-content: center; 
+    min-height: 70vh;
 }
 
-#mainMenuContainer {
-    text-align: center;
-    margin-bottom: 20px;
+.hidden h1{
+    font-size: 3.7em;
 }
 
-#backButtonContainer {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    z-index: 1;
+.hidden h2{
+    font-size: 2.5em;
+    color: bisque;
 }
 
-#backButton {
-    padding: 10px 20px;
-    font-size: 1em;
-    cursor: pointer;
-    background-color: #db2424;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease-in-out;
+.hidden h3{
+    font-size: 2.5em;
 }
 
-#backButton:hover {
-    background-color: #2980b9;
+.hidden{
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 1s ;
 }
 
-.screen {
-    text-align: center;
-    background-color: rgba(255, 255, 255, 0.0); /* Semi-transparent white background */
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.0);
-    max-width: 600px;
-    width: 90%;
-    display: none;
+.show{
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
 }
 
+/* Style for encode and decode buttons */
 button {
-    padding: 10px 20px;
-    font-size: 1em;
-    cursor: pointer;
-    background-color: #db2424;
-    color: #fff;
+    padding: 8px 20px;
     border: none;
     border-radius: 5px;
-    margin-bottom: 20px;
-    transition: background-color 0.3s ease-in-out;
+    background-color: #043899; 
+    color: #fff; 
+    cursor: pointer;
+    transition: background-color 0.2s ease; 
 }
 
-button:hover {
-    background-color: #24db73;
+/* Style for input boxes */
+input[type="text"] {
+    width: 80%; /* Full width */
+    padding: 10px; /* Padding around the text inside the input box */
+    border: 1px solid #ced4da; /* Border color */
+    border-radius: 5px; /* Rounded corners */
+    box-sizing: border-box; /* Include padding and border in the element's total width and height */
+    transition: border-color 0.3s ease; /* Smooth transition on focus */
 }
 
-input {
-    padding: 8px;
-    margin: 8px;
-    width: 80%;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-p {
-    margin-top: 20px;
-    color: #0fd6e1;
-}
-
-h1 {
-    color: #2bff67; 
-}
-
-h2 {
-    color: #2bff67; 
-}
-
-h3 {
-    color: #2bff67; 
-}
-
-
-#encodeDecodeScreen {
-    margin-top: 20px;
+/* Style for input boxes when focused */
+input[type="text"]:focus {
+    outline: none; /* Remove default focus outline */
+    border-color: #007bff; /* Border color when focused */
 }
