--- a/style.css
+++ b/style.css
@@ -42,11 +42,11 @@ section {
 
 /* Styles for smaller screens (e.g., mobile devices) */
 @media only screen and (max-width: 600px) {
-    h1 {
+    .hidden h1 {
         font-size: 2.5em; /* Smaller font size for h1 on smaller screens */
     }
 
-    h2, h3 {
+    .hidden h2, h3 {
         font-size: 1.5em; /* Smaller font size for h2 and h3 on smaller screens */
     }
 
